# buildit_convolutions

./: .gitignore  Makefile  README.md  run_generated_code.sh  run_test.sh  run_timing.sh
generated_code/: buildit_conv2d.h  sample1  sample1.cpp  specialized_test_code.h  specialized_timing_code.h
include/conv_functions/: conv2d.h  conv_nd.h  conv_types.h  runtime.h  schedule.h
include/pipeline/: comment_generator.h  conv.h
runtime/: mem_allocation.h  runtime_functions.h  runtime_types.h
samples/: sample1.cpp  sample2.cpp  sample3.cpp  sample4.cpp  sample5.cpp  sample6.cpp
src/conv_functions/: conv2d.cpp  conv_nd.cpp  conv_types.cpp  runtime.cpp
src/pipeline/: comment_generator.cpp  conv.cpp  conv_code_generator.cpp
test/: CMakeLists.txt  test_types.h  tests.cpp
timing/: CMakeLists.txt  experiments.cpp  tune_conv2d.py  tvm_tuning.py
