cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(buildit_conv_test)

find_package(Torch REQUIRED)
add_library(libbuildit MODULE IMPORTED)
add_library(libconv MODULE IMPORTED)
set_target_properties( libbuildit PROPERTIES IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/../buildit/build/libbuildit.a")
set_target_properties( libconv PROPERTIES IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/../build/libconv.a")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
set(SOURCES "tests.cpp")

add_executable(buildit_conv_test ${SOURCES})
target_link_libraries(buildit_conv_test "${TORCH_LIBRARIES}" libbuildit libconv)
target_include_directories(buildit_conv_test PUBLIC "../build/gen_headers/" "../runtime" "../generated_code" "../buildit/include" "../include")
set_property(TARGET buildit_conv_test PROPERTY CXX_STANDARD 14)
