cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(conv_performance)

find_package(Torch REQUIRED)
add_library(libbuildit MODULE IMPORTED)
add_library(libconv MODULE IMPORTED)
set_target_properties( libbuildit PROPERTIES IMPORTED_LOCATION "/Users/tamaram/sp22/commit/buildit_convolutions/buildit/build/libbuildit.a")
set_target_properties( libconv PROPERTIES IMPORTED_LOCATION "/Users/tamaram/sp22/commit/buildit_convolutions/build/libconv.a")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
set(SOURCES "experiments.cpp")

add_executable(conv_performance ${SOURCES})
target_link_libraries(conv_performance "${TORCH_LIBRARIES}" libbuildit libconv)
target_include_directories(conv_performance PUBLIC "../runtime" "../generated_code" "../samples" "../buildit/include" "../include")
set_property(TARGET conv_performance PROPERTY CXX_STANDARD 14)
